<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimary"
            android:onClick="onButtonClicked"
            android:text="@string/clear"
            android:textColor="@color/colorRed"
            android:textSize="25sp" />


        <Button
            android:id="@+id/power_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/power"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/percent_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/percent"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/division_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/division"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/seven"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/eight"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/nine"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/multiply"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/four"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/five"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/six"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/subtraction_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/subtraction"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />


        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/one"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/two"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/three"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addition_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/plus"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/zero"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnpoint"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="onButtonClicked"
            android:text="@string/dot"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <Button
            android:id="@+id/equal_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@color/colorPrimary"
            android:onClick="onButtonClicked"
            android:text="@string/equal"
            android:textColor="@color/colorOrange"
            android:textSize="25sp" />
    </GridLayout>
</RelativeLayout>